Update Jenkinsfile to apply frontend deployment
Add kubectl apply command for frontend deployment

--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -52,6 +52,8 @@ pipeline {
                     kubectl set image deployment/infrafront-deployment infrafront=${IMAGE_NAME}:${BUILD_TAG} -n app || true
                     kubectl rollout status deployment/infrafront-deployment -n app
                     """
+                    sh "kubectl apply -f status k8s/frontend_deployment.yml"
+                    sh "kubectl rollout status deployment/infrafront-deployment -n app"
                 }
             }
         }
