--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -50,7 +50,7 @@ pipeline {
                     echo "☸️ Deploying frontend to Kubernetes..."
                     //sh "kubectl set image deployment/infrafront-deployment infrafront=${IMAGE_NAME}:${BUILD_TAG} -n app || true"
                     //sh "kubectl rollout status deployment/infrafront-deployment -n app"
-                    sh "kubectl apply -f status k8s/frontend_deployment.yml"
+                    sh "kubectl apply -f k8s/frontend_deployment.yml"
                     sh "kubectl rollout status deployment/infrafront-deployment -n app"
                 }
             }
