--- a/k8s/backend_deployment.yml
+++ b/k8s/backend_deployment.yml
@@ -17,13 +17,13 @@ spec:
     spec:
       containers:
         - name: infraback
-          image: luannv67922/infraback:latest   # <<--- THAY TÊN IMAGE Ở ĐÂY
+          image: luannv67922/infraback:latest   # <<--- Thay tên image thật của bạn
           imagePullPolicy: Always
           ports:
             - containerPort: 8000
           env:
             - name: POSTGRES_HOST
-              value: "postgres"          # service name của postgres trong namespace app
+              value: "postgres"          # service name của postgres (namespace app)
             - name: POSTGRES_PORT
               value: "5432"
             - name: POSTGRES_DB
@@ -38,6 +38,9 @@ spec:
               port: 8000
             initialDelaySeconds: 5
             periodSeconds: 5
+            timeoutSeconds: 2
+            successThreshold: 1
+            failureThreshold: 3
 ---
 apiVersion: v1
 kind: Service
@@ -48,13 +51,9 @@ spec:
   selector:
     app: infraback
   ports:
-    - protocol: TCP
-      port: 8000
-      targetPort: 8000
-  type: NodePort
-  # optional fixed NodePort to access via host
-  ports:
     - name: http
+      protocol: TCP
       port: 8000
       targetPort: 8000
       nodePort: 32001
+  type: NodePort
