--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,25 +1,16 @@
 # backend/Dockerfile
 FROM python:3.11-slim
 
-# install build deps needed by psycopg2 (safe choice)
-USER root
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    libpq-dev \
-    gcc \
-    curl \
+ENV PYTHONUNBUFFERED=1
+
+RUN apt-get update && apt-get install -y --no-install-recommends gcc libpq-dev \
   && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
+COPY requirements.txt /app/
+RUN pip install --no-cache-dir -r requirements.txt
 
-# copy requirements first to leverage docker cache
-COPY requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r /app/requirements.txt
-
-# copy app
 COPY . /app
 
 EXPOSE 8000
-
-# run with uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "app.py"]
