--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,22 +2,21 @@
   "name": "infrafront",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.2.0",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.2.0"
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
   }
 }
