--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,13 @@
-# Stage 1: build frontend
-FROM node:20-alpine AS build
+# frontend/Dockerfile
+FROM node:20-alpine AS builder
 RUN apk add --no-cache curl
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 COPY . .
 RUN npm run build
 
-# Stage 2: serve using nginx
 FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
