--- a/k8s/postgres_deployment.yml
+++ b/k8s/postgres_deployment.yml
@@ -1,27 +1,8 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: app
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: postgres-pvc
-  namespace: app
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
-  namespace: app
-  labels:
-    app: postgres
+  namespace: dbcenter
 spec:
   replicas: 1
   selector:
@@ -35,35 +16,41 @@ spec:
       containers:
         - name: postgres
           image: postgres:15
-          imagePullPolicy: IfNotPresent
           env:
             - name: POSTGRES_DB
-              value: analyticsdb
+              value: "infradb"
             - name: POSTGRES_USER
-              value: admin
+              value: "infrauser"
             - name: POSTGRES_PASSWORD
-              value: luannv@1231
+              value: "123456"
           ports:
             - containerPort: 5432
           volumeMounts:
-            - name: postgres-data
+            - name: pgdata
               mountPath: /var/lib/postgresql/data
+            - name: init-sql
+              mountPath: /docker-entrypoint-initdb.d/init_db.sql
+              subPath: init_db.sql
       volumes:
-        - name: postgres-data
+        - name: pgdata
           persistentVolumeClaim:
             claimName: postgres-pvc
+        - name: init-sql
+          configMap:
+            name: postgres-init-sql
+            items:
+              - key: init_db.sql
+                path: init_db.sql
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres
-  namespace: app
+  name: postgres-service
+  namespace: dbcenter
 spec:
   selector:
     app: postgres
-  type: NodePort        # dễ test kết nối từ host
   ports:
-    - name: postgres
-      port: 5432
+    - port: 5432
       targetPort: 5432
-      nodePort: 30432   # tuỳ chọn
+  type: ClusterIP
