--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -38,6 +38,7 @@ pipeline {
                         sh """
                             echo "$PASS" | docker login -u "$USER" --password-stdin
                             docker push ${DOCKERHUB_USER}/${IMAGE_NAME}:${IMAGE_TAG}
+                            docker push ${DOCKERHUB_USER}/${IMAGE_NAME}:latest
                             docker logout
                         """
                     }
