--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,9 @@
-# backend/Dockerfile
 FROM python:3.11-slim
-
 ENV PYTHONUNBUFFERED=1
-
-RUN apt-get update && apt-get install -y --no-install-recommends gcc libpq-dev \
-  && rm -rf /var/lib/apt/lists/*
-
+RUN apt-get update && apt-get install -y gcc libpq-dev && rm -rf /var/lib/apt/lists/*
 WORKDIR /app
-COPY requirements.txt /app/
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
-COPY . /app
-
+COPY . .
 EXPOSE 8000
 CMD ["python", "app.py"]
