--- a/k8s/postgres_configmap_init.yaml
+++ b/k8s/postgres_configmap_init.yaml
@@ -5,4 +5,16 @@ metadata:
   namespace: dbcenter
 data:
   init_db.sql: |
-$(awk '1{print "    "$0}' k8s/init_db.sql)
+    CREATE EXTENSION IF NOT EXISTS pgcrypto;
+
+    CREATE TABLE IF NOT EXISTS users (
+      id SERIAL PRIMARY KEY,
+      username VARCHAR(50) UNIQUE NOT NULL,
+      password VARCHAR(255) NOT NULL,
+      full_name VARCHAR(100),
+      created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+    );
+
+    INSERT INTO users (username, password, full_name)
+    VALUES ('admin', 'admin', 'Administrator')
+    ON CONFLICT (username) DO NOTHING;
