--- a/web/Jenkinsfile
+++ b/web/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
     stage('Build Docker Image') {
       steps {
         echo "🐳 Building Docker image ${IMAGE_NAME}:${BUILD_NUMBER}..."
-        sh "docker build -t ${IMAGE_NAME}:${BUILD_NUMBER} ."
+        sh "docker build -t ${IMAGE_NAME}:${BUILD_NUMBER} web/."
       }
     }
 
