--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -2,9 +2,10 @@ server {
   listen 80;
   server_name _;
 
+  root /usr/share/nginx/html;
+  index index.html;
+
   location / {
-    root /usr/share/nginx/html;
-    index index.html;
-    try_files $uri /index.html;
+    try_files $uri $uri/ =404;
   }
 }
