--- a/web/Jenkinsfile
+++ b/web/Jenkinsfile
@@ -3,7 +3,14 @@ pipeline {
 
   environment {
     IMAGE_NAME = "infraweb"
-    DOCKERHUB_CREDENTIALS = 'dockerhub'
+        DOCKERHUB_CREDENTIALS = 'dockerhub'
+        DOCKERHUB_USER = 'luannv67922'   // 🔁 thay bằng user thật
+        IMAGE_NAME = 'infraweb'
+        IMAGE_TAG = "build-${BUILD_NUMBER}"
+
+        // 🧩 K8s namespace
+        K8S_NAMESPACE = "app"
+        DEPLOYMENT_FILE = "k8s/backend_deployment.yml"
   }
 
   stages {
@@ -13,16 +20,30 @@ pipeline {
       }
     }
 
-    stage('Build Docker Image') {
-      steps {
-        script {
-          docker.withRegistry('https://index.docker.io/v1/', 'DOCKERHUB_CREDENTIALS') {
-            def app = docker.build("${IMAGE_NAME}:latest", "infra/web")
-            app.push()
-          }
+        stage('Build Docker image') {
+            steps {
+                script {
+                    echo "🏗️ Building Docker image..."
+                    sh "docker build -t ${DOCKERHUB_USER}/${IMAGE_NAME}:${IMAGE_TAG} -t ${DOCKERHUB_USER}/${IMAGE_NAME}:latest infra/web/."
+                }
+            }
         }
-      }
-    }
+
+        stage('Push Docker image to DockerHub') {
+            steps {
+                script {
+                    echo "🚀 Pushing Docker image to DockerHub..."
+                    withCredentials([usernamePassword(credentialsId: "${DOCKERHUB_CREDENTIALS}", usernameVariable: 'USER', passwordVariable: 'PASS')]) {
+                        sh """
+                            echo "$PASS" | docker login -u "$USER" --password-stdin
+                            docker push ${DOCKERHUB_USER}/${IMAGE_NAME}:${IMAGE_TAG}
+                            docker push ${DOCKERHUB_USER}/${IMAGE_NAME}:latest
+                            docker logout
+                        """
+                    }
+                }
+            }
+        }
 
     stage('Deploy to Kubernetes') {
       steps {
