--- a/web/Jenkinsfile
+++ b/web/Jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
         script {
           echo "🐳 Building Docker image..."
           sh """
-            docker build -t ${DOCKERHUB_USER}/${IMAGE_NAME}:${IMAGE_TAG} infra/web/.
+            docker build -t ${DOCKERHUB_USER}/${IMAGE_NAME}:${IMAGE_TAG} web/.
           """
         }
       }
