--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,17 +1,28 @@
-# Stage 1: Build Vue app
-FROM node:20-alpine as build
-
+# ===== Stage 1: Build =====
+FROM node:20-alpine AS builder
 WORKDIR /app
 
+# Copy and install dependencies
 COPY package*.json ./
 RUN npm install
 
+# Copy source code
 COPY . .
+
+# Build Vue project
 RUN npm run build
 
-# Stage 2: Nginx serve static
-FROM nginx:1.25-alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+# ===== Stage 2: Serve with Nginx =====
+FROM nginx:alpine
+
+# Remove default nginx page
+RUN rm -rf /usr/share/nginx/html/*
+
+# Copy built files from builder
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# Optional: Custom nginx config
+# COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
